--- a/index.html
+++ b/index.html
@@ -14,26 +14,65 @@
 </head>
 <body>
 
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">CASHLESS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ENTRADAS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">BONO CULTURAL</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">CARTEL</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">+ INFO</a>
-        </li>
-      </ul>
-            
-    <div class="container text-center"></div>
-        <h1>ZETA SOUND</h1>
-    </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <button type="button" class="btn btn-outline-dark" href="#cashless">CASHLESS</button>
+                    </li>
+                    <li class="nav-item">
+                      <button type="button" class="btn btn-outline-dark" href="#entradas">ENTRADAS</button>
+                    </li>
+                    <li class="nav-item">
+                      <button type="button" class="btn btn-outline-dark" href="#bono-cultural">BONO CULTURAL</button>
+                    </li>
+                    <li class="nav-item">
+                      <button type="button" class="btn btn-outline-dark" href="#cartel">CARTEL</button>
+                    </li>
+                    <li class="nav-item">
+                      <button type="button" class="btn btn-outline-dark"  href="#info">+ INFO</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Secciones de la página -->
+    <section id="cashless" class="container my-5">
+        <h2>CASHLESS</h2>
+        <p>Contenido de la sección Cashless.</p>
+    </section>
+
+    <section id="entradas" class="container my-5">
+        <h2>ENTRADAS</h2>
+        <p>Contenido de la sección Entradas.</p>
+    </section>
+
+    <section id="bono-cultural" class="container my-5">
+        <h2>BONO CULTURAL</h2>
+        <p>Contenido de la sección Bono Cultural.</p>
+    </section>
+
+    <section id="cartel" class="container my-5">
+        <h2>CARTEL</h2>
+        <p>Contenido de la sección Cartel.</p>
+    </section>
+
+    <section id="info" class="container my-5">
+        <h2>+ INFO</h2>
+        <p>Contenido de la sección Información.</p>
+    </section>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+T8lqzYtG1zY2zv5JgVo0s2cIKxwp" 
+    crossorigin="anonymous"></script>
+
 </body>
 </html>
