--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
             </nav>
             <div class="logo logo-container">
                 <img src="media/logo_color_Zeta_Sound.png" class="img-fluid" alt="...">
+                <p class="header-text">"¡Donde el ritmo nace y la calle vibra! Bienvenidos a Zeta Sound, 
+                el latido de la música urbana."</p>
             </div>
 
 
             <video autoplay muted loop>
-                <source src="media/cabecera.mp4" type="video/mp4">
+                <source src="media/video_prueba.mp4" type="video/mp4">
                 Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
