--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
 
             <video autoplay muted loop>
-                <source src="media/video_prueba.mp4" type="video/mp4">
+                <source src="media/video_intro.mp4" type="video/mp4">
                 Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
