cards+hover+titulos

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             </nav>
             <div class="logo logo-container">
                 <img src="media/logo_color_Zeta_Sound.png" class="img-fluid" alt="...">
-                <p class="header-text">"¡Donde el ritmo nace y la calle vibra! Bienvenidos a Zeta Sound, 
-                el latido de la música urbana."</p>
+                <!-- <p class="header-text">"¡Donde el ritmo nace y la calle vibra! Bienvenidos a Zeta Sound, 
+                el latido de la música urbana."</p> -->
+                <p class="header-text">Creado para gente que mueve el mundo</p>
             </div>
 
             <video autoplay muted loop>
@@ -63,7 +64,45 @@
     <!-- Secciones de la página -->
     <section id="city" class="container my-5">
         <h2>CIUDADES</h2>
-        <p>Contenido de la sección Cashless.</p>
+        <p>¿Dónde nos encontrarás?</p>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="media/foto_uno.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">MADRID</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="media/foto_dos.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">VALENCIA</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="media/foto_tres.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">BILBAO</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="media/foto_cuatro.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">GRAN CANARIA</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
     </section>
 
     <section id="tickets" class="container my-5">
@@ -94,5 +133,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <!-- JS -->
+     <script src="js/script.js"></script>
 </body>
 </html>
