--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="header">
-
         <!-- Navbar -->
-        
         <div class="video-header">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon" ></span>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
         
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
@@ -48,8 +45,6 @@
             </nav>
             <div class="logo logo-container">
                 <img src="media/logo_color_Zeta_Sound.png" class="img-fluid" alt="...">
-                <!-- <p class="header-text">"¡Donde el ritmo nace y la calle vibra! Bienvenidos a Zeta Sound, 
-                el latido de la música urbana."</p> -->
                 <p class="header-text">Creado para gente que mueve el mundo</p>
             </div>
 
@@ -67,38 +62,46 @@
         <p>¿Dónde nos encontrarás?</p>
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
-              <div class="card h-100">
+              <div class="card h-100" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <img src="media/foto_uno.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">MADRID</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">ZETA SOUND MADRID</h5>
+                  <p class="card-text">21 al 24 de Junio</p>
+                  <p class="card-text">Auditorio Miguel Ríos</p>
+                  <br>
                 </div>
               </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <img src="media/foto_dos.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">VALENCIA</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">ZETA SOUND VALENCIA</h5>
+                    <p class="card-text">11 al 15 de Julio</p>
+                    <p class="card-text">Recinto Burriana</p>
+                    <br>  
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <img src="media/foto_tres.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">BILBAO</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">ZETA SOUND BILBAO</h5>
+                    <p class="card-text">22 al 26 de Julio</p>
+                    <p class="card-text">Recinto BIVA</p>
+                    <br>  
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100" data-bs-toggle="modal" data-bs-target="#exampleModal">
                   <img src="media/foto_cuatro.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">GRAN CANARIA</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">ZETA SOUND TENERIFE</h5>
+                    <p class="card-text">6 al 10 de Agosto</p>
+                    <p class="card-text">Auditorio Adán Martín</p>
+                    <br>  
                   </div>
                 </div>
               </div>
@@ -129,6 +132,24 @@
         <h2>EXPERIENCE</h2>
         <p>Contenido de la sección Información.</p>
     </section>
+
+    <!-- Pop-up -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Lo siento</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Lo siento :( , ahora mismo no estamos disponibles, inténtalo más tarde!
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
