segunda pagina (WIP)

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 
     <section id="tickets" class="container my-5">
-              <!-- prueba -->
+
       <div class="container mt-5">
 
         <h1 class="title">Elige tu abono</h1>
@@ -167,7 +167,11 @@
         </div>
         
         <!-- Botón -->
-        <button class="btn-custom mt-4">Compra tu entrada</button>
+        <div class="container my-5">
+          <!-- Botón que redirige a otra página -->
+          <a href="paginas/compra.html" class="btn-custom">Compra tu entrada</a>
+      </div>
+      
     </div>
 
     </section>
@@ -214,35 +218,12 @@
 
 
 <!-- PRUEBA -->
+   <ul>
+      <li><a href="paginas/compra.html">prueba</a></li>
+   </ul>
+   
 
-    <div class="container my-5">
-      <h1 class="text-center mb-4" style="color: #3300ff;">Higlights & News</h1>
-      <div class="row g-4">
-        <div class="col-md-6">
-          <div class="custom-cardnews">
-            <img src="media/rosalia_1.jpg" alt="Nuevos Espacios">
-            <h3 class="cardnews mt-3">Nuevos espacios</h3>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="custom-cardnews">
-            <img src="media/rosalia_1.jpg" alt="Nuestra Comunidad">
-            <h3 class="cardnews mt-3">Nuestra Comunidad</h3>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="custom-cardnews">
-            <img src="media/rosalia_1.jpg" alt="Trabaja con Nosotros">
-            <h3 class="cardnews mt-3">Trabaja con Nosotros</h3>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="custom-cardnews">
-            <img src="media/rosalia_1.jpg" alt="Todos tus Artistas Favoritos">
-            <h3 class="cardnews mt-3">Todos tus artistas favoritos</h3>
-          </div>
-        </div>
-      </div>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
