--- a/index.html
+++ b/index.html
@@ -113,23 +113,23 @@
 
     <!-- CREADO PARA GENTE QUE MUEVE EL MUNDO -->
 
-    <div class="d-flex full-height">
+    <!-- <div class="d-flex full-height"> -->
       <!-- Columna izquierda con GIF -->
-      <div class="half-width image-container">
+      <!-- <div class="half-width image-container">
         <img src="media/rosalia-4.webp" alt="" class="">
         <div class="overlay-text">
           <h1>zeta sound</h1>
           <p>Desde 2024</p>
         </div>
-      </div>
+      </div> -->
     
       <!-- Columna derecha con imagen y texto -->
-      <div class="half-width text-container">
+      <!-- <div class="half-width text-container">
         <div>
           <p>Creado para gente que mueve el mundo.</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <section id="tickets" class="container my-5">
       <div class="container mt-5">
@@ -186,10 +186,20 @@
         <p class="subtitle">¿Enserio te vas a perder a estos artistazos?</p>
   </section>
 
-    <section id="radio" class="container my-5">
-        <h1 class="title">Zeta Radio</h1>
-        <p class="subtitle">Ponte al día, que no te pille el toro</p>
-  </section>
+  <section id="radio" class="container my-5">
+    <h1 class="title">Zeta Radio</h1>
+    <p class="subtitle">Ponte al día, que no te pille el toro</p>
+    <div class="video-radio-container">
+        <div class="card h-100">
+            <img src="media/portada_spoty.png" class="card-img-top" alt="Portada Zeta Radio">
+        </div>
+        <div class="video-radio">
+            <video autoplay muted loop>
+                <source src="media/ondas_radio.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
+</section>
 
     <section id="experience" class="container my-5">
         <h1 class="title">Zeta Experience</h1>
@@ -211,16 +221,17 @@
         </div>
     </div>
    
-
-
   <footer class="footer">
-
     <div class="patrocinadores">
       <img src="media/patrocinadores_zs.png" class="img-fluid" alt="...">
    </div>
-
     <div class="container">
-        <h1 class="footer-title">ZETA SOUND</h1>
+        <!-- <h1 class="footer-title">ZETA SOUND</h1> -->
+
+        <div class="logo-footer">
+          <img src="media/logo_color_Zeta_Sound.png" class="img-fluid" alt="...">
+      </div>
+
         <div class="row mt-4 justify-content-between align-items-center">
              <div class="col-md-4 d-flex justify-content-start social-icons">
                   <a href="https://www.instagram.com" target="_blank" class="mx-2">
@@ -240,29 +251,23 @@
                   </a>
              </div>
   
-              <div class="col-md-6 d-flex justify-content-end links-grid">
-                  <div class="row text-start">
-                      <div class="col-md-6 mb-2">
-                          <a href="paginas/politica-privacidad.html">Política de privacidad</a>
-                      </div>
-                      <div class="col-md-6 mb-2">
-                          <a href="paginas/autorizaciones.html">Autorizaciones</a>
-                      </div>
-                      <div class="col-md-6 mb-2">
-                          <a href="paginas/avisos-legales.html">Avisos legales</a>
-                      </div>
-                      <div class="col-md-6 mb-2">
-                          <a href="paginas/entradas.html">Entradas</a>
-                      </div>
-                      <div class="col-md-6 mb-2">
-                          <a href="paginas/join-team.html">Join the team</a>
-                      </div>
-                      <div class="col-md-6 mb-2">
-                          <a href="paginas/localidades.html">Localidades</a>
-                      </div>
+             <div class="col-md-6 d-flex justify-content-end links-grid">
+              <div class="row text-start">
+                  <div class="col-md-6 mb-2">
+                      <a href="media/PPRIVACIDAD_ZS.pdf" target="_blank">Política de privacidad</a>
+                  </div>
+                  <div class="col-md-6 mb-2">
+                      <a href="media/AUTORIZACION_MENORES.pdf" target="_blank">Autorizaciones</a>
+                  </div>
+                  <div class="col-md-6 mb-2">
+                      <a href="media/PCOOKIES_ZS.pdf" target="_blank">Política de cookies</a>
+                  </div>
+                  <div class="col-md-6 mb-2">
+                      <a href="media/AVISOS_LEGALES_ZS.pdf" target="_blank">Avisos legales</a>
                   </div>
               </div>
           </div>
+        </div>
       </div>
   </footer>
   
