--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+
+
     <link rel="stylesheet" href="css/style.css">
+
+    
+
+
 </head>
 <body>
     <div class="header">
@@ -187,7 +195,7 @@
                   <img src="media/imagen_dj.jpg" class="card-img-left" alt="Imagen DJ">
                   <div class="card-news p-3">
                       <h5 class="card-title">Nuevos Espacios</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">Descubre escenarios únicos y rincones sorprendentes en Zeta Sound, diseñados para que vivas cada momento del festival de una forma inolvidable.</p>
                   </div>
               </div>
           </div>
@@ -197,7 +205,7 @@
                 <img src="media/imagen_dj.jpg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
                     <h5 class="card-title">Nuestra Comunidad</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Únete a la comunidad de Zeta Sound y comparte tu pasión por la música urbana junto a miles de fans como tú.</p>
                 </div>
             </div>
           </div>
@@ -207,7 +215,7 @@
                 <img src="media/festival_1.jpeg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
                     <h5 class="card-title">Trabaja con nosotros</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Forma parte del equipo de Zeta Sound y contribuye a crear una experiencia única en el festival de música urbana más esperado del año.</p>
                 </div>
             </div>
           </div>
@@ -217,7 +225,7 @@
                 <img src="media/foto_dos.jpg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
                     <h5 class="card-title">Tus Artistas Favoritos</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Vibra en directo con tus artistas favoritos en Zeta Sound: los mejores talentos de la música urbana reunidos en un solo escenario.</p>
                 </div>
             </div>
           </div>
@@ -227,9 +235,17 @@
   </section>
   
 
-    <section id="artist" class="container my-5">
+  <section id="artist" class="container my-5">
         <h1 class="title">Artistas</h1>
         <p class="subtitle">¿Enserio te vas a perder a estos pedazo de artístas?</p>
+
+      <!--  -->
+ 
+
+
+
+
+
   </section>
 
   <section id="radio" class="container my-5">
@@ -346,7 +362,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!-- JS -->
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
      <script src="js/script.js"></script>
+
+
 
 </body>
 </html>
