fixed spoty · img
Spotify arreglado y cambio de las imágenes

--- a/index.html
+++ b/index.html
@@ -238,13 +238,17 @@
 
   <section id="radio" class="container my-5">
     <h1 class="title">Zeta Radio</h1>
-    <p class="subtitle">Ponte al día, que no te pille el toro</p>
+    <p class="subtitle">Ponte al día y que no te pille el toro</p>
+    
+
     <div class="video-radio-container">
 
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6JbeQSgbRYjOsY7d9dWiZl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="spotify"></iframe>
-        <video autoplay muted loop>
+      <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6JbeQSgbRYjOsY7d9dWiZl?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" position="absolute"></iframe>
+
+      <video autoplay muted loop>
           <source src="media/ondas_radio.mp4" type="video/mp4">
-        </video>
+      </video>
+
     </div>
   </section>
 
@@ -257,13 +261,13 @@
 
   <div class="gallery-container">
     <div class="gallery">
-        <img src="media/festival_1.jpeg" alt="Image 1">
-        <img src="media/foto_dos.jpg" alt="Image 2">
-        <img src="media/foto_cuatro.png" alt="Image 3">
-        <img src="media/foto_dos.jpg" alt="Image 4">
-        <img src="media/foto_tres.jpg" alt="Image 5">
+        <img src="media/photo_gallery_1.jpg" alt="Image 1">
+        <img src="media/photo_galery_2.jpg" alt="Image 2">
+        <img src="media/photo_galery_3.jpg" alt="Image 3">
+        <img src="media/photo_galery_4.jpg" alt="Image 4">
+        <img src="media/photo_galery_5.jpg" alt="Image 5">
 
-        <img src="media/festival_1.jpeg" alt="Image 1">
+        <img src="media/photo_galery_6.jpg" alt="Image 1">
         <img src="media/foto_dos.jpg" alt="Image 2">
         <img src="media/foto_cuatro.png" alt="Image 3">
         <img src="media/foto_dos.jpg" alt="Image 4">
