--- a/index.html
+++ b/index.html
@@ -268,27 +268,27 @@
         <img src="media/photo_galery_5.jpg" alt="Image 5">
 
         <img src="media/photo_galery_6.jpg" alt="Image 1">
-        <img src="media/foto_dos.jpg" alt="Image 2">
-        <img src="media/foto_cuatro.png" alt="Image 3">
-        <img src="media/foto_dos.jpg" alt="Image 4">
-        <img src="media/foto_tres.jpg" alt="Image 5">
+        <img src="media/photo_galery_7.jpg" alt="Image 2">
+        <img src="media/photo_galery_8.jpg" alt="Image 3">
+        <img src="media/photo_galery_9.jpg" alt="Image 4">
+        <img src="media/photo_galery_10.jpg" alt="Image 5">
     </div>
   </div>
 
   <div class="gallery-container2">
     <div class="gallery2">
-        <img src="media/festival_1.jpeg" alt="Image 1">
-        <img src="media/foto_dos.jpg" alt="Image 2">
-        <img src="media/foto_cuatro.png" alt="Image 3">
-        <img src="media/foto_dos.jpg" alt="Image 4">
-        <img src="media/foto_tres.jpg" alt="Image 5">
+      <img src="media/photo_gallery_12.jpg" alt="Image 1">
+      <img src="media/photo_galery_12.jpg" alt="Image 2">
+      <img src="media/photo_galery_13.jpg" alt="Image 3">
+      <img src="media/photo_galery_14.jpg" alt="Image 4">
+      <img src="media/photo_galery_15.jpg" alt="Image 5">
 
-        <img src="media/festival_1.jpeg" alt="Image 1">
-        <img src="media/foto_dos.jpg" alt="Image 2">
-        <img src="media/foto_cuatro.png" alt="Image 3">
-        <img src="media/foto_dos.jpg" alt="Image 4">
-        <img src="media/foto_tres.jpg" alt="Image 5">
-    </div>
+      <img src="media/photo_galery_16.jpg" alt="Image 1">
+      <img src="media/photo_galery_7.jpg" alt="Image 2">
+      <img src="media/photo_galery_18.jpg" alt="Image 3">
+      <img src="media/photo_galery_9.jpg" alt="Image 4">
+      <img src="media/photo_galery_10.jpg" alt="Image 5">
+  </div>
   </div>
 
   <section id="form" class="container my-5">
