--- a/index.html
+++ b/index.html
@@ -116,26 +116,6 @@
             </div>
     </section>
 
-    <!-- CREADO PARA GENTE QUE MUEVE EL MUNDO -->
-
-    <!-- <div class="d-flex full-height"> -->
-      <!-- Columna izquierda con GIF -->
-      <!-- <div class="half-width image-container">
-        <img src="media/rosalia-4.webp" alt="" class="">
-        <div class="overlay-text">
-          <h1>zeta sound</h1>
-          <p>Desde 2024</p>
-        </div>
-      </div> -->
-    
-      <!-- Columna derecha con imagen y texto -->
-      <!-- <div class="half-width text-container">
-        <div>
-          <p>Creado para gente que mueve el mundo.</p>
-        </div>
-      </div>
-    </div> -->
-
   <section id="tickets" class="container my-5">
       <div class="container mt-5">
         
@@ -232,9 +212,26 @@
   
 
   <section id="artist" class="container my-5">
-        <h1 class="title">Artistas</h1>
-        <p class="subtitle">¿Enserio te vas a perder a estos pedazo de artístas?</p>
-  </section>
+    <h1 class="title">Artistas</h1>
+    <p class="subtitle">¿Enserio te vas a perder a estos pedazo de artístas?</p>
+
+    <!-- Carrusel de fotos -->
+    <div class="carousel-container">
+        <div class="carousel">
+            <!-- Agregamos las imágenes del carrusel -->
+            <div class="carousel-item"><img src="media/foto_uno.jpg" alt="Artista 1"></div>
+            <div class="carousel-item"><img src="media/foto_dos.jpg" alt="Artista 2"></div>
+            <div class="carousel-item"><img src="media/foto_tres.jpg" alt="Artista 3"></div>
+            <div class="carousel-item"><img src="media/foto_cuatro.png" alt="Artista 4"></div>
+            <div class="carousel-item"><img src="media/foto_uno.jpg" alt="Artista 5"></div>
+            <div class="carousel-item"><img src="media/foto_dos.jpg" alt="Artista 6"></div>
+            <div class="carousel-item"><img src="media/foto_tres.jpg" alt="Artista 7"></div>
+            <div class="carousel-item"><img src="media/foto_cuatro.png" alt="Artista 8"></div>
+            <div class="carousel-item"><img src="media/foto_uno.jpg" alt="Artista 9"></div>
+            <div class="carousel-item"><img src="media/foto_dos.jpg" alt="Artista 10"></div>
+        </div>
+    </div>
+</section>
 
   <section id="radio" class="container my-5">
     <h1 class="title">Zeta Radio</h1>
