--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-</head>
-<body>
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"></head>
+
+    <body>
     <div class="header">
         <!-- Navbar -->
         <div class="video-header">
@@ -123,13 +125,13 @@
         <p class="subtitle">No hay nada mejor que saber lo que quieres</p>
         
         <div class="row justify-content-center">
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="zoom-out">
             <div class="tickets">
               <h3>General</h3>
               <p>Acceso general.</p>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="zoom-out">
             <div class="tickets">
               <h3>VIP</h3>
               <p>Acceso general.</p>
@@ -139,14 +141,14 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="zoom-out">
             <div class="tickets">
               <h3>Entrada de día</h3>
               <p>Acceso general.</p>
             </div>
           </div>
           
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="zoom-out">
             <div class="tickets">
               <h3>Front Stage</h3>
               <p>Acceso Front Stage.</p>
@@ -164,74 +166,85 @@
   </section>
 
   <section id="news" class="container my-5">
-      <h1 class="title">Highlights & News</h1>
-      <p class="subtitle">¿Cómo que aún no sabes todo de nosotros? Toma anda...</p>
-  
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-          <div class="col">
-              <div class="card d-flex flex-row align-items-center">
-                  <img src="media/imagen_dj.jpg" class="card-img-left" alt="Imagen DJ">
-                  <div class="card-news p-3">
-                      <h5 class="card-title">Nuevos Espacios</h5>
-                      <p class="card-text">Descubre escenarios únicos y rincones sorprendentes en Zeta Sound, diseñados para que vivas cada momento del festival de una forma inolvidable.</p>
-                  </div>
-              </div>
-          </div>
+    <h1 class="title">Highlights & News</h1>
+    <p class="subtitle">¿Cómo que aún no sabes todo de nosotros? Toma anda...</p>
 
-          <div class="col">
-            <div class="card d-flex flex-row align-items-center">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <!-- Card 1 -->
+        <div class="col">
+            <div class="card d-flex flex-row align-items-center" data-aos="flip-left">
                 <img src="media/imagen_dj.jpg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
-                    <h5 class="card-title">Nuestra Comunidad</h5>
-                    <p class="card-text">Únete a la comunidad de Zeta Sound y comparte tu pasión por la música urbana junto a miles de fans como tú.</p>
+                    <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion1">
+                        <h5 class="card-title">Nuevos Espacios</h5>
+                    </button>
+                    <div id="accordion1" class="collapse">
+                        <p class="card-text">
+                            Descubre escenarios únicos y rincones sorprendentes en Zeta Sound, diseñados para que vivas cada momento del festival de una forma inolvidable.
+                        </p>
+                    </div>
                 </div>
             </div>
-          </div>
+        </div>
 
-          <div class="col">
-            <div class="card d-flex flex-row align-items-center">
+        <!-- Card 2 -->
+        <div class="col">
+            <div class="card d-flex flex-row align-items-center" data-aos="flip-right">
+                <img src="media/imagen_dj.jpg" class="card-img-left" alt="Imagen DJ">
+                <div class="card-news p-3">
+                    <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion2">
+                        <h5 class="card-title">Nuestra Comunidad</h5>
+                    </button>
+                    <div id="accordion2" class="collapse">
+                        <p class="card-text">
+                            Únete a la comunidad de Zeta Sound y comparte tu pasión por la música urbana junto a miles de fans como tú.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="col">
+            <div class="card d-flex flex-row align-items-center" data-aos="flip-left">
                 <img src="media/festival_1.jpeg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
-                    <h5 class="card-title">Trabaja con nosotros</h5>
-                    <p class="card-text">Forma parte del equipo de Zeta Sound y contribuye a crear una experiencia única en el festival de música urbana más esperado del año.</p>
+                    <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion3">
+                        <h5 class="card-title">Trabaja con nosotros</h5>
+                    </button>
+                    <div id="accordion3" class="collapse">
+                        <p class="card-text">
+                            Forma parte del equipo de Zeta Sound y contribuye a crear una experiencia única en el festival de música urbana más esperado del año.
+                        </p>
+                    </div>
                 </div>
             </div>
-          </div>
+        </div>
 
-          <div class="col">
-            <div class="card d-flex flex-row align-items-center">
+        <!-- Card 4 -->
+        <div class="col">
+            <div class="card d-flex flex-row align-items-center" data-aos="flip-right">
                 <img src="media/foto_dos.jpg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
-                    <h5 class="card-title">Tus Artistas Favoritos</h5>
-                    <p class="card-text">Vibra en directo con tus artistas favoritos en Zeta Sound: los mejores talentos de la música urbana reunidos en un solo escenario.</p>
+                    <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion4">
+                        <h5 class="card-title">Tus Artistas Favoritos</h5>
+                    </button>
+                    <div id="accordion4" class="collapse">
+                        <p class="card-text">
+                            Vibra en directo con tus artistas favoritos en Zeta Sound: los mejores talentos de la música urbana reunidos en un solo escenario.
+                        </p>
+                    </div>
                 </div>
             </div>
-          </div>
-      </div>
+        </div>
+    </div>
   </section>
   
 
   <section id="artist" class="container my-5">
     <h1 class="title">Artistas</h1>
-    <p class="subtitle">¿Enserio te vas a perder a estos pedazo de artístas?</p>
-
-    <!-- Carrusel de fotos -->
-    <div class="carousel-container">
-        <div class="carousel">
-            <!-- Agregamos las imágenes del carrusel -->
-            <div class="carousel-item"><img src="media/foto_uno.jpg" alt="Artista 1"></div>
-            <div class="carousel-item"><img src="media/foto_dos.jpg" alt="Artista 2"></div>
-            <div class="carousel-item"><img src="media/foto_tres.jpg" alt="Artista 3"></div>
-            <div class="carousel-item"><img src="media/foto_cuatro.png" alt="Artista 4"></div>
-            <div class="carousel-item"><img src="media/foto_uno.jpg" alt="Artista 5"></div>
-            <div class="carousel-item"><img src="media/foto_dos.jpg" alt="Artista 6"></div>
-            <div class="carousel-item"><img src="media/foto_tres.jpg" alt="Artista 7"></div>
-            <div class="carousel-item"><img src="media/foto_cuatro.png" alt="Artista 8"></div>
-            <div class="carousel-item"><img src="media/foto_uno.jpg" alt="Artista 9"></div>
-            <div class="carousel-item"><img src="media/foto_dos.jpg" alt="Artista 10"></div>
-        </div>
-    </div>
-</section>
+    <p class="subtitle">¿En serio te vas a perder a estos pedazo de artistas?</p>
+  </section>
 
   <section id="radio" class="container my-5">
     <h1 class="title">Zeta Radio</h1>
@@ -388,8 +401,9 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
      <script src="js/script.js"></script>
 
-</body>
+  </body>
 </html>
