--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"></head>
-
+</head>
     <body>
     <div class="header">
         <!-- Navbar -->
@@ -253,12 +253,6 @@
 
     <div class="video-radio-container">
         <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6JbeQSgbRYjOsY7d9dWiZl?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" position="absolute"></iframe>
-
-
-      <video autoplay muted loop>
-          <source src="media/ondas_radio.mp4" type="video/mp4">
-      </video>
-
     </div>
   </section>
 
