--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <!-- Swiper.js CDN -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -244,7 +249,127 @@
   <section id="artist" class="container my-5">
     <h1 class="title">Artistas</h1>
     <p class="subtitle">¿En serio te vas a perder a estos pedazo de artistas?</p>
+  
+    <section id="tranding">
+      <div class="container">
+        <div class="swiper tranding-slider">
+          <div class="swiper-wrapper">
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                <img src="media/camiseta_emilia.jpg" alt="Almazara">
+              </div>
+              <div class="tranding-slide-content">
+                <div class="tranding-slide-content-bottom">
+                  <h2 class="place-name">
+                    El Almazara
+                  </h2>
+                  
+                </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                <img src="media/camiseta_recycled.jpg" alt="Virgen de las Caridad">
+              </div>
+              <div class="tranding-slide-content">
+                <div class="tranding-slide-content-bottom">
+                  <h2 class="place-name">
+                    Virgen de la Caridad
+                  </h2>
+                  
+                </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                  <img src="media/cenicero_badgyal.webp" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h2 class="place-name">
+                      Plaza de los Hermanos Criado
+                      </h2>
+                  </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                  <img src="media/chandal_lolaindigo.jpg" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h2 class="place-name">
+                      El Greco 
+                      </h2>
+                  </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                  <img src="media/chaqueta_nyw.jpg" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h2 class="place-name">
+                      Arco de Ugena
+                      </h2>
+                  </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                  <img src="media/foto_cuatro.png" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h2 class="place-name">
+                      Santuario de la Caridad
+                      </h2>
+                  </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                  <img src="media/foto_dos.jpg" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h2 class="place-name">
+                      Torre Mudejar
+                      </h2>
+                  </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+          </div>
+
+          <div class="tranding-slider-control">
+            <!-- <div class="swiper-button-prev slider-arrow">
+                <i class="fa-solid fa-arrow-left"></i>
+            </div>
+            <div class="swiper-button-next slider-arrow">
+                <i class="fa-solid fa-arrow-right"></i>
+            </div> -->
+            <div class="swiper-pagination"></div>
+          </div>
+
+        </div>
+      </div>
   </section>
+</section>
 
   <section id="radio" class="container my-5">
     <h1 class="title">Zeta Radio</h1>
