--- a/paginas/compra.html
+++ b/paginas/compra.html
@@ -131,9 +131,23 @@
 
       <!-- Shopping Cart Button -->
       <div class="container my-5 d-flex justify-content-end">
-          <a href="cart.html" class="btn-custom-buy">Ver carrito y proceder al pago</a>
+        
+           <!-- Shopping Cart Button and "Ver más" -->
+            <div class="container my-5 d-flex justify-content-between align-items-center">
+                <a href="#" id="ver-mas" class="btn-custom-buy">Ver más</a> <!-- Nuevo enlace de "ver más" -->
+                <a href="cart.html" class="btn-custom-buy">Ver carrito y proceder al pago</a>
+            </div>
       </div>
   </section>
+
+  <!-- Popup de aviso -->
+    <div id="popup2-compra" class="popup2">
+        <div class="popup2-content">
+            <p>Ahora no está disponible la compra, te avisaremos cuando sea posible.</p>
+            <button id="cerrar-popup2" class="btn btn-custom2">Cerrar</button>
+        </div>
+    </div>
+
 
     <!-- Footer -->
     <footer class="footer">
