segunda página terminada y carrusel 2.1

--- a/paginas/compra.html
+++ b/paginas/compra.html
@@ -148,6 +148,8 @@
         </div>
     </div>
 
+    
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -208,6 +210,6 @@
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
 
-   <script src="js/script.js"></script>
+   <script src="../js_compra/script_compra.js"></script>
 </body>
 </html>
