style · section create · carrusel 2.2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZETA SOUND</title>
 
+    <!-- TIPOGRAFÍA -->
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
+
     <!-- ICONOS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -125,6 +129,22 @@
             </div>
     </section>
 
+    <!-- CREATE -->
+    <section class="container-fluid vh-100 d-flex flex-column section-with-margins">
+      <div class="row h-100">
+        <!-- Left Section -->
+        <div class="col-md-6 left-section">
+          <span class="overlay-text">DESDE 2024</span>
+          <img src="media/create_rosalia.webp" alt="Zeta Sound">
+          <h1>zeta sound</h1>
+        </div>
+        <!-- Right Section -->
+        <div class="col-md-6 right-section">
+          <h2>Creado para gente que mueve el mundo.</h2>
+        </div>
+      </div>
+    </section>
+
   <section id="tickets" class="container my-5">
       <div class="container mt-5">
         
@@ -183,7 +203,7 @@
                 <img src="media/imagen_dj.jpg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
                     <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion1">
-                        <h5 class="card-title">Nuevos Espacios</h5>
+                        <h5 class="card-title">Nuevos Espacios ></h5>
                     </button>
                     <div id="accordion1" class="collapse">
                         <p class="card-text">
@@ -200,7 +220,7 @@
                 <img src="media/imagen_dj.jpg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
                     <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion2">
-                        <h5 class="card-title">Nuestra Comunidad</h5>
+                        <h5 class="card-title">Nuestra Comunidad ></h5>
                     </button>
                     <div id="accordion2" class="collapse">
                         <p class="card-text">
@@ -217,7 +237,7 @@
                 <img src="media/festival_1.jpeg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
                     <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion3">
-                        <h5 class="card-title">Trabaja con nosotros</h5>
+                        <h5 class="card-title">Trabaja con nosotros ></h5>
                     </button>
                     <div id="accordion3" class="collapse">
                         <p class="card-text">
@@ -234,7 +254,7 @@
                 <img src="media/foto_dos.jpg" class="card-img-left" alt="Imagen DJ">
                 <div class="card-news p-3">
                     <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#accordion4">
-                        <h5 class="card-title">Tus Artistas Favoritos</h5>
+                        <h5 class="card-title">Tus Artistas Favoritos ></h5>
                     </button>
                     <div id="accordion4" class="collapse">
                         <p class="card-text">
@@ -253,7 +273,7 @@
     <p class="subtitle">¿En serio te vas a perder a estos pedazo de artistas?</p>
   
 
-     <!-- PRUEBA -->
+     <!-- CARRUSEL -->
 
       <div class="container artist">
         <div class="swiper tranding-slider">
