--- a/paginas/compra.html
+++ b/paginas/compra.html
@@ -62,8 +62,8 @@
                       <h5 class="card-title">Camiseta Emilia</h5>
                       <p class="card-text">Edición limitada</p>
                       <p class="price">35.00€</p>
-                      <button class="btn btn-custom">Añadir al carrito</button>
-                  </div>
+                      <button class="btn btn-custom abrir-popup3">Añadir al carrito</button>
+                </div>
               </div>
           </div>
 
@@ -75,8 +75,8 @@
                       <h5 class="card-title">Camiseta Recycled J</h5>
                       <p class="card-text">Para los fans más auténticos</p>
                       <p class="price">30.00€</p>
-                      <button class="btn btn-custom">Añadir al carrito</button>
-                  </div>
+                      <button class="btn btn-custom abrir-popup3">Añadir al carrito</button>
+                    </div>
               </div>
           </div>
 
@@ -88,8 +88,8 @@
                       <h5 class="card-title">Chaqueta Natos y Waor</h5>
                       <p class="card-text">Cómoda y estilosa</p>
                       <p class="price">120.00€</p>
-                      <button class="btn btn-custom">Añadir al carrito</button>
-                  </div>
+                      <button class="btn btn-custom abrir-popup3">Añadir al carrito</button>
+                    </div>
               </div>
           </div>
 
@@ -101,8 +101,8 @@
                       <h5 class="card-title">Chandal Lola Índigo</h5>
                       <p class="card-text">Lleva tus cosas con estilo</p>
                       <p class="price">80.00€</p>
-                      <button class="btn btn-custom">Añadir al carrito</button>
-                  </div>
+                      <button class="btn btn-custom abrir-popup3">Añadir al carrito</button>
+                    </div>
               </div>
           </div>
 
@@ -114,8 +114,8 @@
                       <h5 class="card-title">Cenicero Bad Gyal</h5>
                       <p class="card-text">Decora tu salón</p>
                       <p class="price">15.00€</p>
-                      <button class="btn btn-custom">Añadir al carrito</button>
-                  </div>
+                      <button class="btn btn-custom abrir-popup3">Añadir al carrito</button>
+                    </div>
               </div>
           </div>
 
@@ -127,8 +127,8 @@
                       <h5 class="card-title">Sudadera Cruz Cafuné</h5>
                       <p class="card-text">Personaliza tu estilo</p>
                       <p class="price">65.00€</p>
-                      <button class="btn btn-custom">Añadir al carrito</button>
-                  </div>
+                      <button class="btn btn-custom abrir-popup3">Añadir al carrito</button>
+                    </div>
               </div>
           </div>
       </div>
@@ -144,7 +144,17 @@
       </div>
   </section>
 
-  <!-- Popup de aviso -->
+    <!-- Popup de aviso carrito-->
+    <div id="popup3-carrito" class="popup3">
+        <div class="popup3-content">
+            <p>Nuestro merchan aún no está disponible para compra</p>
+            <p>Si tienes dudas, ¡contacta con nosotorxs!</p>
+            <button id="cerrar-popup3" class="btn btn-custom3">Cerrar</button>
+        </div>
+    </div>
+
+
+  <!-- Popup de aviso ver mas-->
     <div id="popup2-compra" class="popup2">
         <div class="popup2-content">
             <p>Ahora no está disponible la compra, te avisaremos cuando sea posible.</p>
