--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- REPOSITORIO -->
+     <!-- https://github.com/lydiaasc/zeta_sound.git -->
   </head>
 
 
